@@ -151,6 +151,32 @@ name|boolean
 name|ignoreCase
 parameter_list|)
 block|{
+name|this
+argument_list|(
+name|in
+argument_list|,
+operator|new
+name|CharArraySet
+argument_list|(
+name|words
+argument_list|,
+name|ignoreCase
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** The words set passed to this constructor will be directly used by this filter    * and should not be modified, */
+DECL|method|KeepWordFilter
+specifier|public
+name|KeepWordFilter
+parameter_list|(
+name|TokenStream
+name|in
+parameter_list|,
+name|CharArraySet
+name|words
+parameter_list|)
+block|{
 name|super
 argument_list|(
 name|in
@@ -160,13 +186,7 @@ name|this
 operator|.
 name|words
 operator|=
-operator|new
-name|CharArraySet
-argument_list|(
 name|words
-argument_list|,
-name|ignoreCase
-argument_list|)
 expr_stmt|;
 name|this
 operator|.
