@@ -369,6 +369,24 @@ name|ignoreCase
 operator|=
 name|ignoreCase
 expr_stmt|;
+if|if
+condition|(
+name|words
+operator|!=
+literal|null
+condition|)
+block|{
+name|words
+operator|=
+operator|new
+name|CharArraySet
+argument_list|(
+name|words
+argument_list|,
+name|ignoreCase
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|create
 specifier|public
@@ -385,12 +403,7 @@ name|KeepWordFilter
 argument_list|(
 name|input
 argument_list|,
-operator|(
-name|Set
-operator|)
 name|words
-argument_list|,
-name|ignoreCase
 argument_list|)
 return|;
 block|}
